deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: myapp:latest # or long aws url that you can get from github pipeline
        imagePullPolicy: Never # Always
        ports:
          - containerPort: 5000
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 10
          failureThreshold: 5
      # imagePullSecrets: # To reach AWS
      # - name: eu-central-1-ecr-registry
